--- a/new/3.html
+++ b/new/3.html
@@ -54,14 +54,13 @@ var storeVis = 1;
 <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
 
-
-<img src = "../images/flag-small.png" id = 'flag' hidden/>
-<img src = "../images/shore2.png" id = 'shore' hidden />
-<img src = "../images/hills.jpg" id = 'hills' hidden/>
-<img src = "../images/bg.jpg" id = 'bg' width = "1100" hidden />
-
 </head>
 <body>
+
+<img src = "../images/flag-small.png" id = 'flag' hidden/>
+<img src = "../images/treasurebox.png" id = 'tbox'  hidden />
+<img src = "../images/bg.jpg" id = 'bg' width = "1100" hidden />
+
 	<div id = "upperBar"></div>
 		<div class = "header-fixed story-top span6" id = "topStory">
 			<div id="upper-part">
@@ -70,10 +69,10 @@ var storeVis = 1;
 			<div class="tabbable tabs-below">
             	<div class="tab-content">
             		<div class="tab-pane active" id="A">
-            			<p>The giant walks 3 meters forward, then two giant steps forward, and 4 meters further ahead. She then buries her treasure.</p>
+            			<p>The giant walks three meters forward, then two giant steps forward, and four meters further ahead. She then buries her treasure.</p>
             		</div>
             		<div class="tab-pane" id="B">
-            			<p>The giant walks 2 meters ahead, and 3 giants steps forward. She then finds the right spot and buries the treasure again.</p>
+            			<p>The giant has more treasure that she wants to add to the treasure from yesterday. So, she walks two meters ahead, and three giants steps forward. She then finds the right spot and buries the treasure again.</p>
             		</div>
             	</div>
             	<ul class="nav nav-tabs">
@@ -89,7 +88,7 @@ var storeVis = 1;
 		        <form name = "answer" action="javascript:void(0);">
 				<input type="text" class = "" id = "ans" placeholder = "Distance in meters"  style = "margin-top: 9px; text-align: right;"/>
 				<a href = "#myModal" data-toggle = "modal"><input type="submit" class = "btn" onclick="javascript:
-				if(document.getElementById('ans').value!= 11) {
+				if(document.getElementById('ans').value!= 17) {
 					document.getElementById('response').innerHTML = msg[0];
 					document.getElementById('progress-button').style.visibility = 'hidden';
 					an = 0;
@@ -158,7 +157,7 @@ var storeVis = 1;
 	
 
 	<br />
-    <canvas id="myCanvas" height = "700" width = "1200"></canvas> 
+    <canvas id="myCanvas" height = "700" width = "1045"></canvas> 
 </div>
 
 <div class = "vertical" />
@@ -174,20 +173,8 @@ var storeVis = 1;
   </div>
   <div class="modal-footer">
     <button class="btn" data-dismiss="modal" aria-hidden="true">Go back</button>
-    <button class="btn btn-primary" data-dismiss="modal" aria-hidden="true" onclick="window.location.href='3.html'" id="progress-button">Onwards, to the next treasure!</button>
+    <button class="btn btn-primary" data-dismiss="modal" aria-hidden="true" onclick="alert('Questions up!')" id="progress-button">Onwards, to the next treasure!</button>
   </div>
-</div>
-
-			    
-<div id="overlay">
-<div id="over-contents">
-     <div id = "message">
-          <p>Correct!</p>
-     </div>
-     <div id = "message-controls">
-     	<a href="#draw" class = "smoothScroll"> <button onclick="javascript: overlay(); console.log('link seen', ans, an); if (an == 1){window.location.href='2.html';}" class = "btn">Okay</button> </a>
-     </div>
-</div>
 </div>
 
 <div class = "vertical" />
