--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
 	<script type="text/javascript">
-	window.location.href = "/../v2/1.html";
+	//window.location.href = "/../v2/1.html";
 	</script>
-
+	<meta http-equiv="Refresh" content="0;URL=/../v2/1.html"> 
 </head>
 <body></body>
 </html>
