--- a/new/index.html
+++ b/new/index.html
@@ -5,21 +5,10 @@
 	Giant Steps for Algebra - Stretchy
 	</title>
 
-<script src="../js/jquery-1.9.1.js"></script>
-<script src="../js/bootstrap.js"></script>
-<script type="text/javascript">
-
-window.location.href = "1.html";
-
-
-</script>
-
-<script type="text/paperscript" src="js/scripts.js" canvas = "myCanvas"> </script>
-
-<link rel="stylesheet" type="text/css" href="../css/style.css">
-<link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
-<link rel="stylesheet" type="text/css" href="../css/font-awesome.min.css">
-
+	<script type="text/javascript">
+		//window.location.href = "1.html";
+	</script>
+	<meta http-equiv="Refresh" content="0;URL=1.html"> 
 </head>
 <body>
 
