Question text improved

--- a/new/1.html
+++ b/new/1.html
@@ -66,11 +66,11 @@ var storeVis = 1;
 		<div class = "header-fixed story-top span12 lead" id = "topStory">
 			<div id="upper-part">
 				<h2>Question 1.</h2>
-				A giant has a treasure she wants to bury. <br />
+				
 				<div class="tabbable tabs-below">
 	            	<div class="tab-content">
 	            		<div class="tab-pane active" id="A">
-	            			<p>The giant walks five meters forward, and then takes three giant steps back. She then buries her treasure.</p>
+	            			<p>A giant has a treasure she wants to bury. <br />The giant walks five meters forward, and then takes three giant steps back. She then buries her treasure.</p>
 	            		</div>
 	            		<div class="tab-pane" id="B">
 	            			<p>The giant has more treasure that she wants to add to the treasure from yesterday. So, she takes two giant steps forward. She then finds the right spot and buries the treasure again.</p>
